# leek-check

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
app/: app.py
backend/: main.py  requirements.txt
config/: .env.example  day_trader_brokers.yaml  deployment_schedule.yaml  etf_universe.yaml  news_keywords.yaml  sector_map.yaml  strategy.yaml  universe_all.yaml  universe_by_industry.yaml  watchlist.yaml  yaogu_watchlist.yaml
data/: assets.json.example  strategy_results.json  transactions.jsonl
docs/: DEPLOY.md  delete-account.html  index.html  privacy.html  supabase_schema.sql
mobile/: BUILD.md  PRIVACY.md  README.md  capacitor.config.json  install_to_phone.ps1  package-lock.json  package.json
scripts/: TASK_SCHEDULER_SETUP.md  a2_divergence_round2.py  ab_consensus_full_backtest.py  ab_consensus_monthly_decompose.py  abc_combo_oos_mcpt.py  adr_arbitrage_2330_tsm.py  adr_overnight_alpha.py  adr_overnight_gap.py  ai_research.py  alpha_decay_monitor.py  backfill_finmind_extras.py  backfill_finmind_master.py  backfill_institutional.py  backfill_institutional_2017.py  backfill_minute_orb_2017.py  backfill_minute_pairs.py  backtest_health_score.py  backtest_health_score_analyze.py  bear_regime_reaudit.py  bond_regime_backtest.py  bounce_candidate_scanner.py  bounce_oos_mcpt.py  bounce_oos_mcpt_fast.py  brazil_ewz_decompose.py  btc_2330_leadlag.py  build_ticker_name_cache.py  bulk_fetch_universe.py  check_env.py  concentration_stress_test.py  consecutive_limitup_alpha.py  (+243 more)
src/: db.py  (+1 more)
(+157 files in other folders)
