[project]
name = "invest-bot"
version = "0.1.0"
description = "Taiwan stock short-term advisory bot (morning briefing, multi-factor scoring, risk management)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pandas>=2.1",
    "numpy>=1.26",
    "pydantic>=2.5",
    "FinMind>=1.7",
    "fugle-marketdata>=1.0",
    "yfinance>=0.2.40",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "anthropic>=0.40",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
backtest = ["vectorbt>=0.26"]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
